// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleContainer should render correctly 1`] = `
<div>
  <div
    class="rmd-toggle-container"
  >
    <input
      type="checkbox"
    />
  </div>
</div>
`;

exports[`ToggleContainer should render correctly 2`] = `
<div>
  <div
    class="rmd-toggle-container rmd-toggle-container--inline"
  >
    <input
      type="checkbox"
    />
  </div>
</div>
`;

exports[`ToggleContainer should render correctly 3`] = `
<div>
  <div
    class="rmd-toggle-container rmd-toggle-container--stacked"
  >
    <input
      type="checkbox"
    />
  </div>
</div>
`;

exports[`ToggleContainer should render correctly 4`] = `
<div>
  <div
    class="rmd-toggle-container rmd-toggle-container--stacked rmd-toggle-container--inline"
  >
    <input
      type="checkbox"
    />
  </div>
</div>
`;
